hphp/hack/test/typecheck/shape_key_exists7.php.exp
File "shape_key_exists7.php", line 6, characters 3-28:
Too few arguments (required 2 but got 1) (Typing[4104])
  File "Shapes.hhi", line 52, characters 28-36:
  Definition is here
